Добавлена сущность genre; Добавлена энпоинт для создания админов; Добавлена миграция с супер админом, для создания админов; Добавлен вывод жанров в книге при GET запросах
